# stackstorm-pack-llm

./: .changelog-reader.yml  .editorconfig  CHANGELOG.md  LICENSE  README.md  commitlint.config.mjs  config.schema.yaml  llm_plan_task.yaml.example  pack.yaml  pyproject.toml  requirements.txt  tests-requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
actions/: llm_chat_complete.py  llm_chat_complete.yaml  normalize_plan_from_llm.py  normalize_plan_from_llm.yaml  plan_from_goal.py  plan_from_goal.yaml  plan_to_tasks.yaml  tasks_from_plan.py  tasks_from_plan.yaml  validate_plan.py  validate_plan.yaml  validate_task_bundle.py  validate_task_bundle.yaml  workflow_fail.py  workflow_fail.yaml
actions/lib/: __init__.py  agent_cli.py  chat_metadata.py  llm_prompt_limits.py  llm_providers.py  plan_model.py
actions/workflows/: plan_to_tasks.yaml
aliases/: plan_to_tasks.yaml
contrib/agent_cli/: README.md  example_echo_bridge.py  example_opencode_bridge.py
schemas/: llm_chat_complete.response.v1.json  plan.v1.json  task_bundle.v1.json
tests/: test_actions_offline.py  test_opencode_bridge_offline.py  test_pack_layout.py  test_plan_model.py  test_schema_fixtures.py  test_task_bundle_fixtures.py
tests/fixtures/: bundle_dag_ordering.json  bundle_minimal.json  bundle_with_action_parameters.json  bundle_with_action_ref.json  plan_dag_ordering.json  plan_minimal.json  plan_with_action_parameters.json  plan_with_action_ref.json
